--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
         
 }
 .overlay{
-    background: red;
+    background: #000000a3;
     background-size: cover;
     padding: 100px 0;
     margin: 0px;
